src/index.css
:root {
  font-family: system-ui, -apple-system, sans-serif;
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

html, body {
  margin: 0;
  box-sizing: border-box;
}

html {
  overflow-x: hidden;
  overflow-y: auto;
}

*, *::before, *::after {
  box-sizing: inherit;
}

#root {
  max-width: 100%;
  min-height: 100dvh;
  display: flex;
  flex-direction: column;
}

h2 {  
  font-size: var(--size-16);
}

h1, h2, p {
  margin: 0;
  line-height: 1;
  font-weight: 900;
}

    .adaptive {
      min-height: var(--size-container);
      padding: var(--size-padding-min) var(--size-padding);
      border-radius: var(--size-border-radius);
      font-size: var(--size-text);
      background: var(--db-background);
      color: var(--db-text);
      border: var(--size-1) solid var(--db-border);
      line-height: var(--size-line-height);
      gap: var(--size-gap);
    }

@media (hover: none) {
  [data-interactive]:hover {
    --db-background: var(--db-background) !important;
    --db-text: var(--db-text) !important;
    --db-border: var(--db-border) !important;
  }
}

